# N0N-OS

./: README.md  package-lock.json  package.json  project.structure.txt  setup_nonos.sh
.github/workflows/: kernel-ci.yml
boot/: Cargo.toml
boot/src/: capsule.rs  entropy.rs  handoff.rs  loader.rs  main.rs  ui.rs  verify.rs  zkmeta.rs  zkverify.rs
cli/: Cargo.toml
cli/src/: main.rs  services.rs
cli/src/nonosctl/: beacon.rs  capsule.rs  capsule_net.rs  capsule_runtime.rs  daemon.rs  depin.rs  kernel.rs  logging.rs  mesh.rs  omnibridge.rs  onion.rs  telemetry.rs  users.rs
cli/src/nonosctl/beacon/: gossip.rs  state.rs  trust.rs  verify.rs
cli/src/nonosctl/nonos-tui/: Cargo.toml
cli/src/nonosctl/nonos-tui/src/: ui.rs
cli/src/ui/: snapshot.rs
gui/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
gui/src/: index.css
gui/src/components/: Console.tsx  Desktop.tsx  ModuleList.tsx  NetStatus.tsx  SystemLogs.tsx  VaultView.tsx
gui/src/hooks/: useSocket.ts
gui/src/pages/: Index.tsx
kernel/: .gitignore  Cargo.toml  Makefile  clippy.toml  lib.rs  linker.ld  makefile  x86_64-nonos.json
kernel/.cargo/: config.toml
kernel/abi/: caps.toml  syscalls.toml  vm.toml
kernel/crypto/: vault.rs
kernel/docs/: mem-layout.md
kernel/log/: logger.rs
kernel/mem/: frame_alloc.rs
kernel/sched/: executor.rs
kernel/src/: bin_main.rs  boot.rs  lib.rs  main.rs
kernel/src/arch/x86_64/: boot.rs  gdt.rs  idt.rs  mod.rs  serial.rs  vga.rs
kernel/src/arch/x86_64/interrupt/: apic.rs  ioapic.rs  pic_legacy.rs
kernel/src/arch/x86_64/keyboard/: mod.rs
kernel/src/arch/x86_64/time/: timer.rs
kernel/src/boot/: entry.rs  mod.rs
kernel/src/capabilities/: mod.rs
kernel/src/crypto/: crypto.rs  entropy.rs  hash.rs  sig.rs  vault.rs  zk.rs
kernel/src/ipc/: channel.rs  message.rs  mod.rs  policy.rs  transport.rs
kernel/src/kernel/src/modules/: auth.rs  manifest.rs  mod_loader.rs  registry.rs  runtime.rs  sandbox.rs  vm.rs
kernel/src/log/: logger.rs  mod.rs
kernel/src/memory/: alloc.rs  frame_alloc.rs  heap.rs  kaslr.rs  layout.rs  mmio.rs  paging.rs  proof.rs  pyhs.rs  region.rs  virt.rs
kernel/src/modules/: auth.rs  manifest.rs  mod_loader.rs  mod_runner.rs  registry.rs  runtime.rs  sandbox.rs  vm.rs  zkvm.rs
kernel/src/runtime/: capsule.rs  isolation.rs  mod.rs  zerostate.rs
kernel/src/sched/: mod.rs  runqueue.rs  scheduler.rs  task.rs
kernel/src/syscall/: capabilities.rs  mod.rs
kernel/src/ui/: cli.rs  event.rs  keyboard.rs  tui.rs
kernel/syscall/: table.rs
scripts/: build-and-run.sh  build.sh  qemu.sh  run-qemu-cargo.sh
shared/: bootinfo.rs
tui/src/: main.rs
