[package]
name = "nonosctl"
version = "0.3.0"
authors = ["ek@nonos-tech.xyz"]
edition = "2021"
description = "NØN-OS Capsule Runtime CLI — Sovereign Node Control for the People"
license = "MIT"
repository = "https://github.com/nonos-tech/nonosctl"
homepage = "https://nonos-tech.xyz"
keywords = ["nonos", "sovereignty", "runtime", "cli", "capsule"]
categories = ["command-line-utilities", "network-programming", "decentralized"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
toml = "0.8"
bincode = "1.3"
libp2p = { version = "0.52", features = [
    "tcp",
    "dns",
    "tokio",
    "yamux",
    "noise",
    "mdns",
    "floodsub",
    "identify",
    "request-response",
    "gossipsub"
] }
async-trait = "0.1"
thiserror = "1.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
colored = "2.0"
rand = "0.8"
whoami = "1.4"
sysinfo = { version = "0.30", features = ["network", "disk"] }

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
pretty_assertions = "1.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true

[features]
default = ["safe"]
safe = []
raw = []
dev = []

[[bin]]
name = "nonosctl"
path = "cli/src/main.rs"

