[package]
name = "nonos_kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
x86_64       = "0.15"
spin         = "0.9"
lazy_static  = "1.4"
uart_16550   = "0.2"
volatile     = "0.4"
log          = "0.4"
linked_list_allocator = "0.9"
hashbrown    = "0.14"  # Optional: HashMap without stdlib
shared       = { path = "../shared", default-features = false }

[build-dependencies]
bootloader = { version = "0.10", default-features = false } # optional if you're still using for tooling

[profile.dev]
panic = "abort"
lto = false
codegen-units = 1

[profile.release]
panic = "abort"
lto = true
strip = "symbols"
codegen-units = 1
